@@ -75,10 +75,10 @@ void Cache::add(const char *key, const char *value) {
 
 System::System() :
   _cache(MAX_CACHE),
-  _output(NULL),
-  _editor(NULL),
-  _systemMenu(NULL),
-  _programSrc(NULL),
+  _output(nullptr),
+  _editor(nullptr),
+  _systemMenu(nullptr),
+  _programSrc(nullptr),
   _state(kInitState),
   _touchX(-1),
   _touchY(-1),
@@ -100,9 +100,9 @@ System::~System() {
   delete [] _programSrc;
   delete _editor;
 
-  _systemMenu = NULL;
-  _programSrc = NULL;
-  _editor = NULL;
+  _systemMenu = nullptr;
+  _programSrc = nullptr;
+  _editor = nullptr;
 }
 
 bool System::execute(const char *bas) {
@@ -111,9 +111,9 @@ bool System::execute(const char *bas) {
   reset_image_cache();
 
   // reset program controlled options
-  opt_antialias = true;
-  opt_show_page = false;
-  opt_quiet = true;
+  opt_antialias = 1;
+  opt_show_page = 0;
+  opt_quiet = 1;
   opt_pref_width = _output->getWidth();
   opt_pref_height = _output->getHeight();
   opt_base = 0;
@@ -128,16 +128,17 @@ bool System::execute(const char *bas) {
     _state = kActiveState;
   }
 
-  if (_editor == NULL) {
+  if (_editor == nullptr) {
     opt_command[0] = '\0';
   }
   enableCursor(true);
   opt_file_permitted = 1;
+  opt_loadmod = 0;
   _output->selectScreen(USER_SCREEN1);
   _output->resetFont();
   _output->flush(true);
   _userScreenId = -1;
-  return result;
+  return result != 0;
 }
 
 bool System::fileExists(strlib::String &path) {
@@ -197,7 +198,7 @@ char *System::getText(char *dest, int maxSize) {
   int h = _output->textHeight();
   int charWidth = _output->getCharWidth();
 
-  FormInput *widget = new FormLineInput(NULL, NULL, maxSize, true, x, y, w, h);
+  FormInput *widget = new FormLineInput(nullptr, nullptr, maxSize, true, x, y, w, h);
   widget->setFocus(true);
 
   int bg = _output->getBackgroundColor();
@@ -269,7 +270,7 @@ void System::handleMenu(MAEvent &event) {
   int fontSize = _output->getFontSize();
   int menuItem = _systemMenu[menuId];
   delete [] _systemMenu;
-  _systemMenu = NULL;
+  _systemMenu = nullptr;
 
   switch (menuItem) {
   case MENU_SOURCE:
@@ -301,7 +302,7 @@ void System::handleMenu(MAEvent &event) {
     break;
   case MENU_COPY:
   case MENU_CUT:
-    if (get_focus_edit() != NULL) {
+    if (get_focus_edit() != nullptr) {
       char *text = get_focus_edit()->copy(menuItem == MENU_CUT);
       if (text) {
         setClipboardText(text);
@@ -311,7 +312,7 @@ void System::handleMenu(MAEvent &event) {
     }
     break;
   case MENU_PASTE:
-    if (get_focus_edit() != NULL) {
+    if (get_focus_edit() != nullptr) {
       char *text = getClipboardText();
       get_focus_edit()->paste(text);
       _output->redraw();
@@ -319,13 +320,13 @@ void System::handleMenu(MAEvent &event) {
     }
     break;
   case MENU_SELECT_ALL:
-    if (get_focus_edit() != NULL) {
+    if (get_focus_edit() != nullptr) {
       get_focus_edit()->selectAll();
       _output->redraw();
     }
     break;
   case MENU_CTRL_MODE:
-    if (get_focus_edit() != NULL) {
+    if (get_focus_edit() != nullptr) {
       bool controlMode = get_focus_edit()->getControlMode();
       get_focus_edit()->setControlMode(!controlMode);
     }
@@ -405,7 +406,7 @@ void System::handleMenu(MAEvent &event) {
 void System::handleEvent(MAEvent &event) {
   switch (event.type) {
   case EVENT_TYPE_OPTIONS_BOX_BUTTON_CLICKED:
-    if (_systemMenu != NULL) {
+    if (_systemMenu != nullptr) {
       handleMenu(event);
     } else if (isRunning()) {
       if (!form_ui::optionSelected(event.optionsBoxButtonIndex)) {
@@ -425,7 +426,7 @@ void System::handleEvent(MAEvent &event) {
     } else {
       dev_pushkey(SB_KEY_MK_PUSH);
       _buttonPressed = _output->pointerTouchEvent(event);
-      showCursor(get_focus_edit() != NULL ? kIBeam : kHand);
+      showCursor(get_focus_edit() != nullptr ? kIBeam : kHand);
     }
     break;
   case EVENT_TYPE_POINTER_DRAGGED:
@@ -447,7 +448,7 @@ void System::handleEvent(MAEvent &event) {
     _buttonPressed = false;
     _touchX = _touchY = _touchCurX = _touchCurY = -1;
     _output->pointerReleaseEvent(event);
-    showCursor(get_focus_edit() != NULL ? kIBeam : kArrow);
+    showCursor(get_focus_edit() != nullptr ? kIBeam : kArrow);
     break;
   default:
     // no event
@@ -457,10 +458,10 @@ void System::handleEvent(MAEvent &event) {
 }
 
 char *System::loadResource(const char *fileName) {
-  char *buffer = NULL;
-  if (strstr(fileName, "://") != NULL) {
+  char *buffer = nullptr;
+  if (strstr(fileName, "://") != nullptr) {
     String *cached = _cache.get(fileName);
-    if (cached != NULL) {
+    if (cached != nullptr) {
       int len = cached->length();
       buffer = (char *)malloc(len + 1);
       memcpy(buffer, cached->c_str(), len);
@@ -484,14 +485,14 @@ char *System::loadResource(const char *fileName) {
       } else {
         systemPrint("\nfailed to open %s\n", fileName);
       }
-      _output->setStatus(NULL);
+      _output->setStatus(nullptr);
       dev_fclose(handle);
       v_free(var_p);
       v_detach(var_p);
       opt_file_permitted = 0;
     }
   }
-  if (buffer == NULL) {
+  if (buffer == nullptr) {
     // remove failed item from history
     strlib::String *old = _history.peek();
     if (old && old->equals(fileName)) {
@@ -504,7 +505,7 @@ char *System::loadResource(const char *fileName) {
 bool System::loadSource(const char *fileName) {
   // loads _programSrc
   char *source = readSource(fileName);
-  if (source != NULL) {
+  if (source != nullptr) {
     free(source);
     return true;
   }
@@ -513,7 +514,7 @@ bool System::loadSource(const char *fileName) {
 
 void System::logStack(const char *keyword, int type, int line) {
 #if defined(_SDL)
-  if (_editor != NULL) {
+  if (_editor != nullptr) {
     if (type == kwPROC || type == kwFUNC) {
       _stackTrace.add(new StackTraceNode(keyword, type, line));
     }
@@ -524,7 +525,7 @@ void System::logStack(const char *keyword, int type, int line) {
 char *System::readSource(const char *fileName) {
   _activeFile.clear();
   char *buffer;
-  if (!_mainBas && _editor != NULL && _loadPath.equals(fileName)) {
+  if (!_mainBas && _editor != nullptr && _loadPath.equals(fileName)) {
     buffer = _editor->getTextSelection(true);
   } else {
     buffer = loadResource(fileName);
@@ -540,7 +541,7 @@ char *System::readSource(const char *fileName) {
           _modifiedTime = st.st_mtime;
           char fullPath[PATH_MAX + 1];
           char *path = realpath(fileName, fullPath);
-          if (path != NULL) {
+          if (path != nullptr) {
             // set full path for getModifiedTime()
             _activeFile = fullPath;
           } else {
@@ -551,7 +552,7 @@ char *System::readSource(const char *fileName) {
       }
     }
   }
-  if (buffer != NULL) {
+  if (buffer != nullptr) {
     delete [] _programSrc;
     int len = strlen(buffer);
     _programSrc = new char[len + 1];
@@ -738,7 +739,7 @@ void System::setBack() {
       if (old) {
         delete old;
       }
-      if (_history.peek() != NULL) {
+      if (_history.peek() != nullptr) {
         _loadPath.clear();
         _loadPath.append(_history.peek());
       }
@@ -783,7 +784,7 @@ bool System::setParentPath() {
 
 void System::setupPath(String &loadPath) {
   const char *filename = loadPath;
-  if (strstr(filename, "://") == NULL) {
+  if (strstr(filename, "://") == nullptr) {
     const char *slash = strrchr(filename, '/');
     if (!slash) {
       slash = strrchr(filename, '\\');
@@ -852,11 +853,8 @@ void System::showMenu() {
   if (!_menuActive) {
     _menuActive = true;
     char buffer[64];
-    if (_systemMenu != NULL) {
-      delete [] _systemMenu;
-    }
-
-    StringList *items = new StringList();
+    delete [] _systemMenu;
+    auto *items = new StringList();
     int completions = 0;
 
     if (get_focus_edit() && isEditing()) {
@@ -866,7 +864,7 @@ void System::showMenu() {
     _systemMenu = new int[MENU_SIZE + completions];
 
     int index = 0;
-    if (get_focus_edit() != NULL) {
+    if (get_focus_edit() != nullptr) {
       if (isEditing()) {
         items->add(new String("Undo"));
         items->add(new String("Redo"));
@@ -1127,7 +1125,7 @@ void System::printSource() {
 void System::setExit(bool quit) {
   if (!isClosing()) {
     bool running = isRunning();
-    _state = (quit && _editor == NULL) ? kClosingState : kBackState;
+    _state = (quit && _editor == nullptr) ? kClosingState : kBackState;
     if (running) {
       brun_break();
     }
@@ -1153,7 +1151,7 @@ void System::systemPrint(const char *format, ...) {
   va_list args;
 
   va_start(args, format);
-  unsigned size = vsnprintf(NULL, 0, format, args);
+  unsigned size = vsnprintf(nullptr, 0, format, args);
   va_end(args);
 
   if (size) {
